fix: now that someone is on leave we can't add a shift for them.

--- a/components/schedule/employer/calendar/calendarRow/shiftItem/main.module.scss
+++ b/components/schedule/employer/calendar/calendarRow/shiftItem/main.module.scss
@@ -29,6 +29,10 @@ $absence-border-colour: #FFD700;
     
     &.absence {
         border-color: darken($absence-border-colour, 10%);
+        cursor: default; 
+        &:hover {
+            transform: none;
+        }
     }
 
     .absence {
